# thesis-compile

./: .gitignore  .pre-commit-config.yaml  Forensic Image Synthesis.bib  README.md  base.tex  citekeys.txt  filtered_bibliography.bib  fsidi.tex  fsidi_base.tex  main.tex  pyproject.toml  requirements.txt  standard.bibtex  standard_fixed.bib  thesis.run.xml  thesis.tex  thesis_bib.bib  thesis_bib_fixed.bib
ai stuff/: document.md  document_linked.md  emails.py  emails.txt  notes.md
md/: 39.0 - Abstract.md  39.1 - Introduction.md  39.2 - Literature review.md  39.3 - Architecture and design.md  39.4 - Action automation.md  39.5 - Output and validation.md  39.6 - Building scenarios.md  39.7 - Evaluation and observations.md  39.8 - Future work.md  39.9 - Conclusion.md  39.A - Architectural diagrams.md  39.B - Code samples.md  39.C - Acronyms.md  39.D - Glossary.md  _Chapters_v2.md  _FSIDI submission.md  _Glossary.md  _Pastables.md  _Style guidelines.md  _Style guidlines.md  _TODO.md
src/: fix_bib.py  fsidi.py  main.py
tex/: 39.0 - Abstract.tex  39.1 - Introduction.tex  39.2 - Literature review.tex  39.3 - Architecture and design.tex  39.4 - Action automation.tex  39.5 - Output and validation.tex  39.6 - Building scenarios.tex  39.7 - Evaluation and observations.tex  39.8 - Future work.tex  39.9 - Conclusion.tex  39.A - Architectural diagrams.tex  39.B - Code samples.tex  39.C - Acronyms.tex  39.D - Glossary.tex  _Chapters_v2.tex  _FSIDI submission.tex  _Glossary.tex  _Pastables.tex  _Style guidelines.tex  _Style guidlines.tex  _TODO.tex
(+12 files in other folders)
