[project]
name = "template"
version = "0.0.1"
description = "hello world"
requires-python = ">=3.11"

dependencies = [
  "pycryptodomex>=3.21.0",
]

[project.optional-dependencies]
# pip install template[dev]
dev = [
  "black",
  "celery-types",
  "flake8",
  "flake8-bugbear",
  "pre-commit",
  "pytest",
  "tox",
]
# all taken from Pydantic's pyproject.toml
# docs = [
#     "autoflake",
#     "mkdocs",
#     "mkdocs-awesome-pages-plugin",
#     "mkdocs-exclude",
#     "mkdocs-gen-files",
#     "mkdocs-glightbox",
#     "mkdocs-material[imaging]",
#     "mkdocs-redirects",
#     "mkdocstrings-python",
#     "tomli",
#     "pyupgrade",
#     "mike",
#     "requests",
# ]

#[tool.setuptools]
#packages = ["template"]

[tool.flake8]
extend_ignore = [
  "E501", # silence "line too long", i don't care lol
  "E203" # silence "whitespace before :"
]

[tool.mypy]
strict_optional = true

[tool.isort]
profile = "black"
